# cat-agent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
cat_agent/: __init__.py  agent.py  log.py  multi_agent_hub.py  settings.py
cat_agent/agents/: __init__.py  assistant.py  fncall_agent.py  group_chat.py  group_chat_auto_router.py  memo_assistant.py  react_chat.py  router.py  user_agent.py  virtual_memory_agent.py
cat_agent/agents/doc_qa/: basic_doc_qa.py  parallel_doc_qa.py  parallel_doc_qa_member.py  parallel_doc_qa_summary.py
cat_agent/agents/keygen_strategies/: gen_keyword.py  gen_keyword_with_knowledge.py  split_query.py  split_query_then_gen_keyword.py  split_query_then_gen_keyword_with_knowledge.py
cat_agent/agents/writing/: continue_writing.py  expand_writing.py  outline_writing.py
cat_agent/llm/: __init__.py  base.py  function_calling.py  llama_cpp.py  llama_cpp_vision.py  oai.py  openvino.py  qwen_dashscope.py  qwenaudio_dashscope.py  qwenomni_oai.py  qwenvl_dashscope.py  qwenvl_oai.py  transformers_llm.py
cat_agent/llm/base/: __init__.py  model.py  postprocessing.py  retry.py  truncation.py
cat_agent/llm/fncall_prompts/: base_fncall_prompt.py  nous_fncall_prompt.py  qwen_fncall_prompt.py
cat_agent/memory/: memory.py
cat_agent/tools/: __init__.py  base.py  code_interpreter.py  doc_parser.py  extract_doc_vocabulary.py  image_gen.py  image_search.py  image_zoom_in_qwen3vl.py  mcp_manager.py  python_executor.py  retrieval.py  simple_doc_parser.py  storage.py  wasm_code_interpreter.py  web_extractor.py  web_search.py
cat_agent/tools/parsers/: __init__.py  base.py  excel_parser.py  html_parser.py  pdf_parser.py  ppt_parser.py  txt_parser.py  word_parser.py
cat_agent/tools/search_tools/: __init__.py  base_search.py  front_page_search.py  hybrid_search.py  keyword_search.py  leann_search.py  vector_search.py
cat_agent/utils/: file_utils.py  json_utils.py  media_utils.py  message_utils.py  misc.py  output_beautify.py  str_processing.py  tokenization_qwen.py  utils.py
examples/doc_parser_agent/: doc_parser_example.py  example.csv
examples/llama_cpp_math_guy/: llama_cpp_example.py
examples/llama_cpp_vision/: llama_cpp_vision_example.py
examples/logging_demo/: logging_example.py
examples/math_guy/: math_guy.py
examples/multi_agent/: group_chat_example.py  router_example.py
examples/rag_leann/: leann_demo_doc.txt  leann_qwen3_demo.py
examples/transformers_math_guy/: math_guy.py
examples/wasm_code_interpreter/: wasm_code_interpreter_example.py
tests/: test_agent.py  test_assistant.py  test_base_fncall_prompt.py  test_base_search.py  test_code_interpreter.py  test_continue_writing.py  test_doc_parser.py  test_expand_writing.py  test_front_page_search.py  test_function_calling.py  test_gen_keyword.py  test_group_chat.py  test_group_chat_auto_router.py  test_image_gen.py  test_image_search.py  test_keyword_search.py  test_leann_search.py  test_llama_cpp.py  test_llama_cpp_vision.py  test_llm_base.py  test_memo_assistant.py  test_memory.py  test_multi_agent_hub.py  test_nous_fncall_prompt.py  test_openvino.py  test_outline_writing.py  test_output_beautify.py  test_parallel_doc_qa.py  test_parallel_executor.py  test_parsers.py  test_python_executor.py  test_qwen_fncall_prompt.py  test_react_chat.py  test_retrieval.py  test_router.py  test_schema.py  test_simple_doc_parser.py  test_storage.py  test_str_processing.py  test_tokenization_qwen.py  (+8 more)
