 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"

[project]
name = "cat-agent"
dynamic = ["version", "readme"]
description = "Cat-Agent: Enhancing LLMs with Agent Workflows, RAG, Function Calling, and Code Interpreter."
authors = [
  { name = "Kemalcan Bora", email = "kemalcanbora@gmail.com" },
]
license = { text = "Apache-2.0" }
keywords = ["LLM", "Agent", "Function Calling", "RAG", "Code Interpreter"]
requires-python = ">=3.10"
 dependencies = [
   "dashscope>=1.11.0",
   "eval_type_backport",
   "json5",
   "jsonlines",
   "jsonschema",
   "openai",
   "pydantic>=2.3.0",
   "requests",
   "tiktoken",
   "pillow",
   "dotenv",
 ]

 [project.optional-dependencies]
 rag = [
   "charset-normalizer",
   "rank_bm25",
   "jieba",
   "snowballstemmer",
   "beautifulsoup4",
   "pdfminer.six",
   "pdfplumber",
   "python-docx",
   "python-pptx",
   "pandas",
   "tabulate",
   "leann==0.3.6",
 ]
 mcp = ["mcp"]
 python_executor = [
   "pebble",
   "multiprocess",
   "timeout_decorator",
   "python-dateutil",
   "sympy",
   "numpy",
   "scipy",
 ]
 code_interpreter = [
   "anyio>=3.7.1",
   "fastapi>=0.103.1",
   "jupyter>=1.0.0",
   "uvicorn>=0.23.2",
 ]
 gui = [
   "pydantic==2.9.2",
   "pydantic-core==2.23.4",
   "modelscope_studio==1.1.7",
 ]

 [project.urls]
 Homepage = "https://github.com/kemalcanbora/cat-agent"
 "Issue Tracker" = "https://github.com/kemalcanbora/cat-agent/issues"

 [tool.setuptools]
 include-package-data = true

 [tool.setuptools.packages.find]
 exclude = ["examples", "examples.*", "qwen_server", "qwen_server.*"]

 [tool.setuptools.dynamic]
 version = { attr = "cat_agent.__version__" }
 readme = { file = "README.md", content-type = "text/markdown" }

 [tool.setuptools.package-data]
 "cat_agent" = [
   "utils/qwen.tiktoken",
   "tools/resource/*.ttf",
   "tools/resource/*.py",
   "gui/assets/*.css",
   "gui/assets/*.jpeg",
 ]

